ghc-4335c07/testsuite/tests/roles/should_fail/T9204.hs

module T9204 where

import T9204a

data D a
