ghc-4335c07/testsuite/tests/roles/should_fail/T9204.stderr

T9204.hs:6:1: error:
    Type constructor ‘D’ has conflicting definitions in the module
    and its hs-boot file
    Main module: type role D phantom
                 data D a
    Boot file:   data D a
    The roles do not match.
    Roles on abstract types default to ‘representational’ in boot files.
